--- a/index.html
+++ b/index.html
@@ -1,1 +1,85 @@
-TODO
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://kit.fontawesome.com/8f9f0ac261.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="./style.css"/>
+  </head>
+  <body>
+    <div class="container">
+      <div class="d-flex pl-5 pt-5 justify-content-start">
+        <div>
+          <img
+            class="img-fluid img-thumbnail float-left"
+            style="height: 250px; display: block;"
+            src="./assets/bailey.jpg"
+            alt="Bailey"
+          />
+        </div>
+        <div class="col">
+          <div class="d-block profile-row">
+            <h1>Bailey Miller</h1>
+          </div>
+          <div class="d-block profile-row">
+            <i class="fas fa-map-marker-alt"></i>
+            <a
+              class="pl-2"
+              href="https://www.cs.cmu.edu/"
+            >
+              Carnegie-Mellon University
+            </a>
+          </div>
+          <div class="d-block profile-row">
+            <i class="far fa-envelope"></i>
+            <a
+              class="pl-2"
+              href="mailto:baileymark.miller@gmail.com"
+            >
+              baileymark.miller@gmail.com
+            </a>
+          </div>
+          <div class="d-block profile-row">
+            <i class="fab fa-github"></i>
+            <a
+              class="pl-2"
+              href="https://github.com/baileymiller"
+            >
+              Github
+            </a>
+          </div>
+          <div class="d-block profile-row">
+            <i class="fas fa-graduation-cap"></i>
+            <a
+              class="pl-2"
+              href="https://scholar.google.com/citations?user=Gv0mfrcAAAAJ&hl=en"
+            >
+              Google Scholar
+            </a>
+          </div>
+          <div class="d-block profile-row">
+            <i class="fab fa-linkedin"></i>
+            <a
+              class="pl-2"
+              href="https://www.linkedin.com/in/baileymmiller"
+            >
+              LinkedIn
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="d-flex flex-column pl-5 pt-5">
+        <div>
+          <h3>Brief Bio</h3>
+          <p>I am an incoming PhD student at Carnegie-Mellon where I'm advised by <a href="https://www.cs.cmu.edu/~igkioule/">Ioannis Gkioulekas</a> and supported by the <a href="https://www.nsfgrfp.org/">NSF Graduate Research Fellowship</a>. I received a BA in Computer Science and Mathematics at Dartmouth College, where I had the privelege of working with <a href="https://cs.dartmouth.edu/~wjarosz/">Wojciech Jarosz</a>.</p>
+        </div>
+        <div>
+          <h3>Publications</h3>
+          <div id="publications-list"/>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
