--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"></script>
     <script src="https://kit.fontawesome.com/8f9f0ac261.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="./style.css"/>
   </head>
@@ -11,8 +12,8 @@
       <div class="d-flex pl-5 pt-5 justify-content-start">
         <div>
           <img
+            id="profile-pic"
             class="img-fluid img-thumbnail float-left"
-            style="height: 250px; display: block;"
             src="./assets/bailey.jpg"
             alt="Bailey"
           />
@@ -70,16 +71,19 @@
       </div>
     </div>
     <div class="container">
-      <div class="d-flex flex-column pl-5 pt-5">
+      <div class="d-flex flex-column pl-5 pt-3">
         <div>
           <h3>Brief Bio</h3>
-          <p>I am an incoming PhD student at Carnegie-Mellon where I'm advised by <a href="https://www.cs.cmu.edu/~igkioule/">Ioannis Gkioulekas</a> and supported by the <a href="https://www.nsfgrfp.org/">NSF Graduate Research Fellowship</a>. I received a BA in Computer Science and Mathematics at Dartmouth College, where I had the privelege of working with <a href="https://cs.dartmouth.edu/~wjarosz/">Wojciech Jarosz</a>.</p>
+          <hr/>
+          <p>I am an incoming PhD student at Carnegie-Mellon where I'm advised by <a href="https://www.cs.cmu.edu/~igkioule/">Ioannis Gkioulekas</a> and supported by the <a href="https://www.nsfgrfp.org/">NSF Graduate Research Fellowship</a>. Before starting my PhD, I spent 2 years working at <a href="https://www.blend.com">Blend</a> as a software engineer. I received a BA in Computer Science and Mathematics at Dartmouth College, where I had the privelege of working with <a href="https://cs.dartmouth.edu/~wjarosz/">Wojciech Jarosz</a>.</p>
         </div>
-        <div>
+        <div class="pt-2">
           <h3>Publications</h3>
+          <hr/>
           <div id="publications-list"/>
         </div>
       </div>
     </div>
+    <script src="./loadPublications.js"></script>
   </body>
 </html>
