add joint authors

--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
         <div class="pt-2">
           <h3>Publications</h3>
           <hr/>
-          <div id="publications-list"/>
+          <div id="publications-list" class="pt-1"></div>
+          <div class="pb-5">(* indicates joint first authors)</div>
         </div>
       </div>
     </div>
