--- a/index.html
+++ b/index.html
@@ -83,6 +83,18 @@
           <div id="publications-list" class="pt-1"></div>
           <div class="pb-5">(* indicates joint first authors)</div>
         </div>
+        <div>
+          <h3>Teaching Assistant</h3>
+          <hr/>
+          <ul>
+            <li>
+              Special Topics: Physics-Based Rendering (CMU 15-468, 15-668) <a href="http://graphics.cs.cmu.edu/courses/15-468/">Spring 2021</a>
+            </li>
+            <li>
+              Rendering Algorithms (Dartmouth CS 87/187) <a href="https://canvas.dartmouth.edu/courses/26202">Spring 2018</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
     <script src="./loadPublications.js"></script>
