--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
           <hr/>
           <ul>
             <li>
-              Special Topics: Physics-Based Rendering (CMU 15-468, 15-668) <a href="http://graphics.cs.cmu.edu/courses/15-468/">Spring 2021</a>
+              <h6>Special Topics: Physics-Based Rendering (CMU 15-468/15-668) <a href="http://graphics.cs.cmu.edu/courses/15-468/">Spring 2021</a></h6>
             </li>
             <li>
-              Rendering Algorithms (Dartmouth CS 87/187) <a href="https://canvas.dartmouth.edu/courses/26202">Spring 2018</a>
+              <h6>Rendering Algorithms (Dartmouth CS 87/187) <a href="https://canvas.dartmouth.edu/courses/26202">Spring 2018</a></h6>
             </li>
           </ul>
         </div>
