--- a/index.html
+++ b/index.html
@@ -68,6 +68,15 @@
               Google Scholar
             </a>
           </div>
+	       <div class="d-block profile-row">
+           <i class="fas fa-question-circle"></i>
+            <a
+              class="pl-2"
+              href="https://amzn.to/3pubkpC"
+            >
+              Advice for Grad School
+            </a>
+	       </div>
         </div>
       </div>
     </div>
